--- a/cpu_tracer/Cargo.toml
+++ b/cpu_tracer/Cargo.toml
@@ -16,3 +16,6 @@ rand = { workspace = true }
 imgui = { workspace = true }
 imgui-wgpu = { workspace = true }
 imgui-winit-support = { workspace = true }
+
+[dependencies.common_code]
+path = "../common_code"
